apps/bsis-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsis-app
  labels:
    app.kubernetes.io/name: bsis-app
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: bsis
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: bsis-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
